<?xml version="1.0" encoding="utf-8"?>
<layout>

    <android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="112dp"
            android:background="@color/colorBackground">

            <android.support.design.widget.CollapsingToolbarLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                app:collapsedTitleGravity="start"
                app:collapsedTitleTextAppearance="@style/CollapsedAppBar"
                app:contentScrim="@color/colorBackground"
                app:expandedTitleMarginStart="24dp"
                app:expandedTitleTextAppearance="@style/ExpandedAppBar"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="MOVİES"
                app:toolbarId="@+id/toolbar">

                <android.support.v7.widget.Toolbar
                    android:id="@+id/toolbar"
                    android:layout_width="match_parent"
                    android:layout_height="56dp"
                    app:titleMarginStart="8dp" />
            </android.support.design.widget.CollapsingToolbarLayout>
        </android.support.design.widget.AppBarLayout>

        <android.support.v4.widget.NestedScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/nested_padding_movie_tv">

                <TextView
                    android:id="@+id/textV_topRatedMovies_fr_movies"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingStart="24dp"
                    android:text="@string/top_rated_movies"
                    android:textSize="@dimen/text_size_secondary_title_fr_movie_tv"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="parent" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerV_topRatedMovies_fr_movies"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/recyclerview1_height_fr_movie_tv"
                    android:nestedScrollingEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textV_topRatedMovies_fr_movies"
                    app:layout_constraintTop_toBottomOf="@+id/textV_topRatedMovies_fr_movies" />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingStart="24dp"
                    android:text="@string/now_playing"
                    android:textSize="@dimen/text_size_secondary_title_fr_movie_tv"
                    app:layout_constraintTop_toBottomOf="@+id/recyclerV_topRatedMovies_fr_movies"
                    tools:layout_editor_absoluteX="16dp" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerV_nowPlaying_fr_movies"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/recyclerview2_height_fr_movie_tv"
                    android:nestedScrollingEnabled="false"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="@+id/textView4"
                    app:layout_constraintTop_toBottomOf="@+id/textView4" />

                <TextView
                    android:id="@+id/textView5"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:layout_marginTop="4dp"
                    android:fontFamily="@font/roboto_medium"
                    android:paddingStart="24dp"
                    android:text="@string/popular"
                    android:textSize="@dimen/text_size_secondary_title_fr_movie_tv" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerV_popular_fr_movies"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/recyclerview2_height_fr_movie_tv"
                    android:nestedScrollingEnabled="false" />
            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </android.support.design.widget.CoordinatorLayout>

</layout>
