<?xml version="1.0" encoding="utf-8"?>
<layout >

    <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorBackground"
        android:clickable="true"
        android:focusable="true">

        <FrameLayout
            android:id="@+id/frameL_error_fr_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/something_went_wrong"
                android:textSize="24sp" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/frameL_loading_fr_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ProgressBar
                android:id="@+id/progressBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center" />
        </FrameLayout>

        <android.support.v4.widget.NestedScrollView
            android:id="@+id/nestedScrollV_fr_detail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fillViewport="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:background="@android:color/white">

                    <ImageView
                        android:id="@+id/imageV_cover_fr_detail"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/detail_cover_image"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <ImageView
                        android:id="@+id/imageView5"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_marginTop="24dp"
                        android:layout_marginEnd="24dp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_sharing" />

                    <TextView
                        android:id="@+id/textV_back_fr_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="4dp"
                        android:text="@string/back"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_18sp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageV_back_fr_detail"
                        app:layout_constraintStart_toEndOf="@+id/imageV_back_fr_detail"
                        app:layout_constraintTop_toTopOf="@+id/imageV_back_fr_detail" />

                    <ImageView
                        android:id="@+id/imageV_back_fr_detail"
                        android:layout_width="@dimen/icon_size"
                        android:layout_height="@dimen/icon_size"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="24dp"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        app:srcCompat="@drawable/ic_back" />

                    <ImageView
                        android:id="@+id/imageV_star4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/textV_voteAverage_fr_detail"
                        app:layout_constraintStart_toEndOf="@+id/imageV_star3"
                        app:layout_constraintTop_toTopOf="@+id/textV_voteAverage_fr_detail"
                        app:srcCompat="@drawable/ic_star" />

                    <ImageView
                        android:id="@+id/imageV_star3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/textV_voteAverage_fr_detail"
                        app:layout_constraintStart_toEndOf="@+id/imageV_star2"
                        app:layout_constraintTop_toTopOf="@+id/textV_voteAverage_fr_detail"
                        app:srcCompat="@drawable/ic_star" />

                    <ImageView
                        android:id="@+id/imageV_star2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/textV_voteAverage_fr_detail"
                        app:layout_constraintStart_toEndOf="@+id/imageV_star1"
                        app:layout_constraintTop_toTopOf="@+id/textV_voteAverage_fr_detail"
                        app:layout_constraintVertical_bias="0.333"
                        app:srcCompat="@drawable/ic_star" />

                    <ImageView
                        android:id="@+id/imageV_star5"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="8dp"
                        app:layout_constraintBottom_toBottomOf="@+id/textV_voteAverage_fr_detail"
                        app:layout_constraintStart_toEndOf="@+id/imageV_star4"
                        app:layout_constraintTop_toTopOf="@+id/textV_voteAverage_fr_detail"
                        app:srcCompat="@drawable/ic_star" />

                    <ImageView
                        android:id="@+id/imageV_star1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        app:layout_constraintBottom_toBottomOf="@+id/textV_voteAverage_fr_detail"
                        app:layout_constraintStart_toEndOf="@+id/textV_voteAverage_fr_detail"
                        app:layout_constraintTop_toTopOf="@+id/textV_voteAverage_fr_detail"
                        app:srcCompat="@drawable/ic_star" />

                    <TextView
                        android:id="@+id/textV_voteAverage_fr_detail"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginBottom="8dp"
                        android:fontFamily="@font/roboto_bold"
                        android:textColor="@color/colorAccent"
                        android:textSize="@dimen/text_size_14sp"
                        app:layout_constraintBottom_toBottomOf="@+id/cardV_thumbnail_fr_detail"
                        app:layout_constraintStart_toEndOf="@+id/cardV_thumbnail_fr_detail"
                        app:layout_constraintTop_toBottomOf="@+id/textV_genre_fr_detail" />

                    <android.support.v7.widget.CardView
                        android:id="@+id/cardV_thumbnail_fr_detail"
                        android:layout_width="@dimen/cardview2_fr_detail"
                        android:layout_height="@dimen/cardview1_fr_detail"
                        android:layout_marginStart="24dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="13dp"
                        app:layout_constraintBottom_toBottomOf="@+id/imageV_cover_fr_detail"
                        app:layout_constraintEnd_toStartOf="@+id/textV_title_fr_detail"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/imageV_cover_fr_detail"
                        app:layout_constraintWidth_percent="0.31">

                        <ImageView
                            android:id="@+id/imageV_thumbnail_fr_detail"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:layout_constraintBottom_toBottomOf="@+id/imageV_cover_fr_detail"
                            app:layout_constraintEnd_toStartOf="@+id/textV_title_fr_detail"
                            app:layout_constraintStart_toStartOf="parent"
                            app:layout_constraintTop_toBottomOf="@+id/imageV_cover_fr_detail" />
                    </android.support.v7.widget.CardView>

                    <TextView
                        android:id="@+id/textV_overview_fr_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="24dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="24dp"
                        android:layout_marginBottom="8dp"
                        android:textSize="@dimen/text_size_14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/cardV_thumbnail_fr_detail" />

                    <TextView
                        android:id="@+id/textV_title_fr_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="8dp"
                        android:layout_marginBottom="8dp"
                        android:alpha="0"
                        android:ellipsize="end"
                        android:maxLines="2"
                        android:scaleX="0.8"
                        android:scaleY="0.8"
                        android:textAlignment="textStart"
                        android:textAllCaps="true"
                        android:textColor="@android:color/white"
                        android:textSize="@dimen/text_size_20sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="@+id/imageV_cover_fr_detail"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/cardV_thumbnail_fr_detail"
                        app:layout_constraintTop_toTopOf="@+id/cardV_thumbnail_fr_detail"
                        app:layout_constraintVertical_bias="0.6" />

                    <TextView
                        android:id="@+id/textV_genre_fr_detail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginEnd="8dp"
                        android:ellipsize="end"
                        android:maxLines="1"
                        android:textSize="@dimen/text_size_14sp"
                        app:layout_constraintBottom_toTopOf="@+id/textV_voteAverage_fr_detail"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toEndOf="@+id/cardV_thumbnail_fr_detail"
                        app:layout_constraintTop_toBottomOf="@+id/imageV_cover_fr_detail" />

                </android.support.constraint.ConstraintLayout>

                <TextView
                    android:id="@+id/textV_castCrew_fr_detail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="24dp"
                    android:layout_marginTop="4dp"
                    android:layout_marginBottom="4dp"
                    android:fontFamily="@font/roboto_medium"
                    android:text="@string/full_cast_crew"
                    android:textSize="@dimen/text_size_16sp"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recyclerV_castCrew_fr_detail"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_marginBottom="24dp"
                    android:background="@android:color/white"
                    android:nestedScrollingEnabled="false"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/textV_castCrew_fr_detail" />

            </LinearLayout>
        </android.support.v4.widget.NestedScrollView>

    </FrameLayout>
</layout>
